force-app/main/default/objects/Survey_Question__c/Survey_Question__c.object-meta.xml
<CustomObject>
    <label>Survey Question</label>
    <nameField>
        <displayFormat>SQ-{0000}</displayFormat>
        <label>Survey Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>