force-app/main/default/objects/Survey_Question__c/fields/Question_Type__c.field-meta.xml
<CustomField>
    <fullName>Question_Type__c</fullName>
    <label>Question Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>text</fullName>
                <default>true</default>
                <label>text</label>
            </value>
            <value>
                <fullName>truefalse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>