force-app/main/default/objects/Survey_Question__c/fields/Survey_Template__c.field-meta.xml
<CustomField>
    <fullName>Survey_Template__c</fullName>
    <label>Template</label>
    <referenceTo>Survey_Template__c</referenceTo>
    <relationshipLabel>Survey Questions</relationshipLabel>
    <relationshipName>Survey_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>